--- a/Labo 7/Styles/Stijl opdracht nature blog.css
+++ b/Labo 7/Styles/Stijl opdracht nature blog.css
@@ -4,8 +4,7 @@ article {background-color:lightgrey;}
         background-repeat: no-repeat;
         color: white;
         background-size: auto;
-        margin: auto;
-        }
+        margin: auto;}
 
 nav {background-color:black;margin: auto;}
 
