--- a/Labo 8/Styles/Stijl opdracht Lorem Ipsum extra space.css
+++ b/Labo 8/Styles/Stijl opdracht Lorem Ipsum extra space.css
@@ -1,11 +1,13 @@
-.div1 {width: 50%;
+.div1 {width: 47%;
 height: 100px;
 border: solid 1px;
 box-sizing: border-box;
-float: left;}
+float: left;
+margin: 10px;}
 
-.div2 {width: 50%;
+.div2 {width: 47%;
 height: 100px;
 border: solid 1px;
 box-sizing: border-box;
-float: left;}
+float: left;
+margin: 10px;}
