--- a/Labo 10/Styles/stijl oef 1.css
+++ b/Labo 10/Styles/stijl oef 1.css
@@ -1,2 +1,7 @@
-
+div div div:nth-child(odd) {background-color: darkgray;
+height: 100px;
+margin: 5px;}
+div div div:nth-child(even) {background-color: dimgrey;
+height: 100px;
+margin: 5px;}
 
