--- a/Labo 11/Styles/exercise3.css
+++ b/Labo 11/Styles/exercise3.css
@@ -7,6 +7,9 @@
     padding:20px;
     background-color: white;
 }
+.container {display: grid;
+grid-template-columns:repeat(5,1fr);
+grid-template-rows:repeat(5,1fr);}
 
 .block.block1{
 
@@ -15,23 +18,43 @@
 
 }
 .block.block3{
-
+grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
-.block.block4{
-
+.block.block4{grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 .block.block5{
-
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 .block.block6{
-
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
 .block.block7{
-
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
 .block.block8{
-
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 5;
+    grid-row-end: 6;
 }
 .block.block9{
-
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 5;
+    grid-row-end: 6;
 }
