--- a/Labo 11/Styles/exercise5.css
+++ b/Labo 11/Styles/exercise5.css
@@ -1,5 +1,7 @@
-.container{
-
+.container{display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-template-rows:repeat(5,1fr);
+    gap: 10px;
 }
 
 .container .block{
@@ -11,26 +13,56 @@
 }
 
 .block.block1{
-
+    grid-column-start: 1;
+    grid-column-end: 4;
+    background-color: mediumpurple;
  }
 .block.block2{
-
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    background-color: blue;
 }
 .block.block3{
-
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    background-color: darkred;
 }
 .block.block4{
-
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    background-color: purple;
 }
 .block.block5{
-
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    background-color: cadetblue;
 }
 .block.block6{
-
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    background-color: mediumpurple;
 }
 .block.block7{
-
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    background-color: #2B2D42;
 }
 .block.block8{
-
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 6;
+    background-color: darkcyan;
 }
