--- a/Labo 11/Styles/exercise6.css
+++ b/Labo 11/Styles/exercise6.css
@@ -1,2 +1,44 @@
+.container {display: grid;
+    grid-template-columns:1fr;
+    grid-template-rows:repeat(4,1fr);
+    gap: 10px;
+}
 
+.container .block {padding:20px;
+    color: white;
+    font-size: 4em;
+    font-weight:bold;
+    text-align:center;}
 
+.block.block1 {background-color: mediumpurple;}
+.block.block2 {background-color: #EF233C;}
+.block.block3 {background-color: #007e7e ;}
+.block.block4 {background-color: #2B2D42}
+
+@media screen and (min-width: 320px) and (max-width: 772px){
+    .block.block1 {
+        grid-row-start: 2;
+        grid-row-end: 3;
+        background-color: mediumpurple;
+    }
+    .block.block2 {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        background-color: #EF233C;
+    }
+    .block.block3 {background-color: #007e7e ;}
+    .block.block4 {background-color: #2B2D42}
+}
+
+@media screen and (min-width: 772px) and (max-width: 992px){
+    .block.block1 {background-color: mediumpurple;}
+    .block.block2 {
+        grid-row-start: 3;
+        grid-row-end: 4;
+        background-color: #EF233C;
+    }
+    .block.block3 {grid-row-start: 2;
+        grid-row-end: 3;
+        background-color: #007e7e ;}
+    .block.block4 {background-color: #2B2D42}
+}
