--- a/Labo 11/Styles/exercise6.css
+++ b/Labo 11/Styles/exercise6.css
@@ -42,3 +42,27 @@
         background-color: #007e7e ;}
     .block.block4 {background-color: #2B2D42}
 }
+
+@media screen and (min-width: 992px) {
+    .container {grid-template-columns:1fr 2fr;
+        grid-template-rows:repeat(3,1fr);
+    .block.block1 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        background-color: mediumpurple;}
+    }
+    .block.block2 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        background-color: #EF233C;}
+    .block.block3 {grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        background-color: #007e7e ;}
+    .block.block4 {grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        background-color: #2B2D42}
+}
