--- a/Semester 2/Labo 10 Javascript/Opdracht MyInternetStartPage/styles/style.css
+++ b/Semester 2/Labo 10 Javascript/Opdracht MyInternetStartPage/styles/style.css
@@ -9,7 +9,7 @@
     font-size: 1em;
     text-align: center;
     border-radius: 5px;}
-.form-control {width: 100%; height: 30px; }
+.form-control {width: 100%; height: 30px; border-radius: 5px;}
 .under-searchbar { font-weight: lighter; font-size: smaller; margin-top: 5px; margin-bottom: 5px; }
 .zoekopdracht {margin-bottom: 5px; margin-top: 5px; }
 
@@ -53,3 +53,5 @@ a {text-decoration: none;}
 .card-title {font-size: 20px;}
 
 .btn-primary:hover {background-color: limegreen; color: white;}
+
+.btnDelete {float: right;}
