--- a/Semester 2/Labo 10 Javascript/Opdracht MyInternetStartPage/styles/style.css
+++ b/Semester 2/Labo 10 Javascript/Opdracht MyInternetStartPage/styles/style.css
@@ -54,4 +54,4 @@ a {text-decoration: none;}
 
 .btn-primary:hover {background-color: limegreen; color: white;}
 
-.btnDelete {float: right;}
+.btn-delete {float: right;}
